tests/warn/parsing-missing-comma.jo
def foo(x: Int y: Int) = x + y  // error

def bar =
  var x = 4
  x def 7                         // error

def test(x: Int) = x * x

def double(x = x * x           // error

def test =
  foo x with a, b = e x = 8    // error

def qux(x)
  { x * x }          // error
